# nautobot-app-chatops

./: .bandit.yml  .cookiecutter.json  .dockerignore  .flake8  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  able: true won't work. Instead, change the test:  creds.env.example  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml  rebake.yml  upstream_testing.yml
changes/: 112.added  138.removed  147.changed  166.added  169.documentation  169.housekeeping  171.added  173.changed  174.changed  182.added  187.changed  187.fixed  191.fixed  194.added  196.changed  197.added  202.added  203.added  204.added  205.added  206.added  207.added  208.added  218.changed  221.changed  223.fixed  224.added  227.added  227.fixed  228.changed  239.fixed  241.fixed  253.fixed  265.changed  270.added  272.added  273.fixed  288.added  293.fixed  293.housekeeping  (+39 more)
development/: Dockerfile  creds.example.env  dev.env  development.env  docker-compose.base.yml  docker-compose.bot-framework.yml  docker-compose.celery.yml  docker-compose.dev.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.requirements.yml  docker-compose.socket.yml  docker-compose.yml  nautobot_config.py  towncrier_template.j2
development/ansible/: docker-compose.yml
development/grafana/: docker-compose.yml  prometheus.yml
development/grafana/dashboards/: nautobot.json  prometheus.json
development/mattermost/: docker-compose.yml  dump.sql  nautobot_bootstrap.py
docs/: FAQ.md  chat_setup.md  contributing.md  design.md  extending.md  glossary.md  index.md  requirements.txt
docs/admin/: admin_install.md  admin_upgrade.md  compatibility_matrix.md  install.md  mattermost_setup.md  microsoft_teams_setup.md  slack_setup.md  uninstall.md  upgrade.md  webex_setup.md
docs/admin/install/: aci_setup.md  ansible_setup.md  aristacv_setup.md  grafana_setup.md  index.md  ipfabric_setup.md  mattermost_setup.md  meraki_setup.md  microsoft_teams_setup.md  panorama_setup.md  slack_setup.md  webex_setup.md
docs/admin/integrations/: aci.md  ansible.md  aristacv.md  grafana.md  ipfabric.md  meraki.md  nautobotgpt.md  nso.md  panorama.md  slurpit.md
docs/admin/release_notes/: version_1.0.md  version_1.1.md  version_1.10.md  version_1.11.md  version_1.2.md  version_1.3.md  version_1.4.md  version_1.5.md  version_1.6.md  version_1.7.md  version_1.8.md  version_1.9.md  version_2.0.md  version_2.1.md  version_3.0.md  version_3.1.md  version_3.2.md  version_3.3.md  version_4.0.md
docs/assets/: extra.css
docs/chat_setup/: chat_setup.md  mattermost_setup.md  microsoft_teams_setup.md  slack_setup.md  webex_setup.md  webex_teams_setup.md
docs/dev/: contributing.md  design.md  dev_contributing.md  dev_environment.md  dev_extending.md  release_checklist.md
docs/dev/code_reference/: api.md  base.md  mattermost.md  models.md  ms_teams.md  package.md  slack.md  webex.md
docs/models/: accessgrant.md  chatopsaccountlink.md  commandlog.md  commandtoken.md
docs/user/: aci_commands.md  ansible_commands.md  app_faq.md  app_getting_started.md  app_overview.md  aristacv_commands.md  faq.md  grafana_commands.md  ipfabric_commands.md  meraki_commands.md  nso_commands.md  panorama_commands.md
docs/user/integrations/: aci.md  aristacv.md  grafana.md  ipfabric.md  meraki.md  nautobotgpt.md  nso.md  panorama.md  slurpit.md
nautobot_chatops/: __init__.py  admin.py  app-config-schema.json  banner.py  choices.py  constants.py  filters.py  forms.py  jobs.py  metrics.py  metrics_app.py  models.py  navigation.py  tables.py  urls.py  utils.py  views.py
nautobot_chatops/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
nautobot_chatops/api/views/: __init__.py  generic.py  lookup.py  mattermost.py  ms_teams.py  slack.py  webex.py  webex_teams.py
nautobot_chatops/dispatchers/: __init__.py  adaptive_cards.py  base.py  mattermost.py  ms_teams.py  slack.py  slack_socket.py  webex.py  webex_teams.py
nautobot_chatops/helpers/: slack.py
nautobot_chatops/integrations/: __init__.py  utils.py
nautobot_chatops/integrations/aci/: __init__.py  aci.py  utils.py  worker.py
nautobot_chatops/integrations/ansible/: __init__.py  tower.py  worker.py
nautobot_chatops/integrations/arista_cloudvision/: __init__.py  utils.py  worker.py
nautobot_chatops/integrations/aristacv/: cvpgrpcutils.py  utils.py  worker.py
nautobot_chatops/integrations/cloudvision/: __init__.py  cvpgrpcutils.py  utils.py  worker.py
nautobot_chatops/integrations/grafana/: __init__.py  django1.json  exceptions.py  filters.py  forms.py  grafana.py  helpers.py  models.py  navigation.py  panels.yml  tables.py  urls.py  views.py  worker.py
nautobot_chatops/integrations/ipfabric/: __init__.py  context.py  (+3 more)
nautobot_chatops/migrations/: 0001_initial.py  0002_commandlog_params1.py  0003_params_to_params1.py  0004_remove_params_rename_params1.py  0005_chatops_account_link.py  0005_grafana.py  0006_account_link.py  0006_auto_20230825_1640.py  0006_nautobot_2.py  0007_account_link.py  0008_auto_20231228_2231.py  0008_commandfilter.py  0008_nso_integration.py
nautobot_chatops/sockets/: __init__.py  slack.py
nautobot_chatops/tests/: __init__.py  atest_dispatchers.py  bootstrap.py  fixtures.py  test_api.py  test_api_views.py  test_app_metrics.py  test_basic.py  test_dispatchers.py  test_filter_commandlog.py  test_filters.py  test_forms.py  test_model_commandlog.py  test_models.py  test_utils.py  test_views.py  test_workers.py
nautobot_chatops/workers/: __init__.py  base.py  clear.py  helper_functions.py  nautobot.py
nautobot_ssot/: __init__.py
nautobot_ssot/api/: __init__.py
nautobot_ssot/tests/: __init__.py  test_api.py  test_basic.py
setup_files/: nautobot_slack_manifest.yml
(+118 files in other folders)
